--- a/snake.html
+++ b/snake.html
@@ -1,211 +1,235 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Snake Game Pro</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: monospace;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      transition: background 0.5s, color 0.5s;
-    }
-
-    canvas {
-      border: 3px solid lime;
-      background-color: #111;
-      touch-action: none;
-    }
-
-    h1 {
-      margin: 10px;
-    }
-
-    #score {
-      font-size: 24px;
-    }
-
-    .controls, .options {
-      margin-top: 15px;
-      display: flex;
-      gap: 10px;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-
-    .btn {
-      padding: 10px 15px;
-      background: #0f0;
-      color: #000;
-      border: none;
-      font-weight: bold;
-      border-radius: 5px;
-      font-size: 16px;
-      transition: background 0.2s;
-    }
-
-    .btn:active {
-      background: #0a0;
-    }
-
-    .dark {
-      background: #000;
-      color: #0f0;
-    }
-
-    .light {
-      background: #fff;
-      color: #111;
-    }
-
-    .light canvas {
-      border-color: #333;
-      background: #eee;
-    }
-
-    .light .btn {
-      background: #333;
-      color: #fff;
-    }
-
-    .light .btn:active {
-      background: #666;
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Snake Rover — Mobile Friendly</title>
+<style>
+  body {
+    margin: 0; 
+    background: #121212; 
+    color: #eee; 
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+    display: flex; 
+    flex-direction: column; 
+    align-items: center; 
+    justify-content: center;
+    height: 100vh;
+    user-select: none;
+  }
+  canvas {
+    background: #222;
+    border: 3px solid #0f0;
+    border-radius: 12px;
+    touch-action: none;
+  }
+  #score {
+    margin: 10px;
+    font-size: 24px;
+    letter-spacing: 2px;
+  }
+  .controls {
+    margin-top: 10px;
+    width: 180px;
+    display: grid;
+    grid-template-areas:
+      ". up ."
+      "left . right"
+      ". down .";
+    grid-gap: 10px;
+    user-select: none;
+  }
+  .controls button {
+    width: 50px;
+    height: 50px;
+    font-size: 28px;
+    border-radius: 10px;
+    background: #0a0;
+    color: #efe;
+    border: none;
+    opacity: 0.8;
+    transition: opacity 0.15s, background 0.15s;
+  }
+  .controls button:active {
+    opacity: 1;
+    background: #3c3;
+  }
+  .up { grid-area: up; }
+  .down { grid-area: down; }
+  .left { grid-area: left; }
+  .right { grid-area: right; }
+</style>
 </head>
-<body class="dark">
-  <h1>Snake Game Pro 🐍</h1>
-  <div id="score">Score: 0</div>
-  <canvas id="game" width="400" height="400"></canvas>
+<body>
 
-  <div class="controls">
-    <button class="btn" onclick="changeDirection('up')">⬆️</button>
-    <button class="btn" onclick="changeDirection('left')">⬅️</button>
-    <button class="btn" onclick="changeDirection('down')">⬇️</button>
-    <button class="btn" onclick="changeDirection('right')">➡️</button>
-  </div>
+<h1>Snake Rover</h1>
+<div id="score">Score: 0</div>
+<canvas id="gameCanvas" width="400" height="400"></canvas>
 
-  <div class="options">
-    <button class="btn" onclick="toggleTheme()">🌙/☀️ Toggle Theme</button>
-  </div>
+<div class="controls">
+  <button class="up">↑</button>
+  <button class="left">←</button>
+  <button class="right">→</button>
+  <button class="down">↓</button>
+</div>
 
-  <!-- Sound effects -->
-  <audio id="eat-sound" src="https://actions.google.com/sounds/v1/cartoon/wood_plank_flicks.ogg" preload="auto"></audio>
-  <audio id="gameover-sound" src="https://actions.google.com/sounds/v1/cartoon/cartoon_boing.ogg" preload="auto"></audio>
+<script>
+(() => {
+  const canvas = document.getElementById('gameCanvas');
+  const ctx = canvas.getContext('2d');
+  const scoreDisplay = document.getElementById('score');
 
-  <script>
-    const canvas = document.getElementById("game");
-    const ctx = canvas.getContext("2d");
-    const scoreText = document.getElementById("score");
-    const eatSound = document.getElementById("eat-sound");
-    const gameOverSound = document.getElementById("gameover-sound");
-    const body = document.body;
+  const gridSize = 20;  // Size of snake segments and food
+  const canvasSize = canvas.width; // 400x400
+  const tileCount = canvasSize / gridSize;
 
-    const gridSize = 20;
-    const tileCount = canvas.width / gridSize;
+  let snake = [
+    { x: 9, y: 9 },
+    { x: 8, y: 9 },
+    { x: 7, y: 9 }
+  ];
 
-    let snake = [{ x: 10, y: 10 }];
-    let dx = 1, dy = 0;
-    let food = randomFood();
-    let score = 0;
-    let speed = 150;
-    let gameInterval;
+  let food = { x: 0, y: 0 };
+  let direction = 'right';
+  let newDirection = direction;
+  let score = 0;
+  let gameOver = false;
 
-    function randomFood() {
-      return {
-        x: Math.floor(Math.random() * tileCount),
-        y: Math.floor(Math.random() * tileCount)
-      };
+  function placeFood() {
+    food.x = Math.floor(Math.random() * tileCount);
+    food.y = Math.floor(Math.random() * tileCount);
+    // Ensure food doesn't spawn on the snake
+    while (snake.some(seg => seg.x === food.x && seg.y === food.y)) {
+      food.x = Math.floor(Math.random() * tileCount);
+      food.y = Math.floor(Math.random() * tileCount);
     }
+  }
 
-    function changeDirection(dir) {
-      switch (dir) {
-        case 'up': if (dy === 0) { dx = 0; dy = -1; } break;
-        case 'down': if (dy === 0) { dx = 0; dy = 1; } break;
-        case 'left': if (dx === 0) { dx = -1; dy = 0; } break;
-        case 'right': if (dx === 0) { dx = 1; dy = 0; } break;
-      }
-    }
+  function drawRect(x, y, color) {
+    ctx.fillStyle = color;
+    ctx.fillRect(x * gridSize, y * gridSize, gridSize, gridSize);
+  }
 
-    document.addEventListener("keydown", (e) => {
-      if (e.key === "ArrowUp") changeDirection('up');
-      if (e.key === "ArrowDown") changeDirection('down');
-      if (e.key === "ArrowLeft") changeDirection('left');
-      if (e.key === "ArrowRight") changeDirection('right');
+  function drawSnake() {
+    snake.forEach((segment, index) => {
+      const color = index === 0 ? '#0f0' : '#0a0';  // Head bright, body darker green
+      drawRect(segment.x, segment.y, color);
     });
+  }
 
-    function toggleTheme() {
-      body.classList.toggle("dark");
-      body.classList.toggle("light");
+  function drawFood() {
+    drawRect(food.x, food.y, '#f00'); // Bright red food
+  }
+
+  function update() {
+    if(gameOver) return;
+
+    direction = newDirection;
+
+    // Calculate new head position
+    let head = { ...snake[0] };
+    if (direction === 'right') head.x++;
+    else if (direction === 'left') head.x--;
+    else if (direction === 'up') head.y--;
+    else if (direction === 'down') head.y++;
+
+    // Wrap around edges (optional)
+    if (head.x < 0) head.x = tileCount - 1;
+    if (head.x >= tileCount) head.x = 0;
+    if (head.y < 0) head.y = tileCount - 1;
+    if (head.y >= tileCount) head.y = 0;
+
+    // Check collision with self
+    if (snake.some(seg => seg.x === head.x && seg.y === head.y)) {
+      gameOver = true;
+      alert('Game Over! Your score: ' + score);
+      resetGame();
+      return;
     }
 
-    function gameLoop() {
-      const head = { x: snake[0].x + dx, y: snake[0].y + dy };
+    // Add new head to snake
+    snake.unshift(head);
 
-      // Collision detection
-      if (
-        head.x < 0 || head.x >= tileCount ||
-        head.y < 0 || head.y >= tileCount ||
-        snake.some(seg => seg.x === head.x && seg.y === head.y)
-      ) {
-        gameOverSound.play();
-        alert("Game Over! Your Score: " + score);
-        resetGame();
-        return;
-      }
-
-      snake.unshift(head);
-
-      if (head.x === food.x && head.y === food.y) {
-        score++;
-        eatSound.play();
-        food = randomFood();
-        adjustSpeed();
-      } else {
-        snake.pop();
-      }
-
-      draw();
+    // Check if food eaten
+    if (head.x === food.x && head.y === food.y) {
+      score++;
+      scoreDisplay.textContent = 'Score: ' + score;
+      placeFood();
+    } else {
+      snake.pop(); // remove tail if no food eaten
     }
+  }
 
-    function adjustSpeed() {
-      clearInterval(gameInterval);
-      speed = Math.max(50, 150 - score * 5); // Increases speed
-      gameInterval = setInterval(gameLoop, speed);
-    }
+  function clear() {
+    ctx.fillStyle = '#222';
+    ctx.fillRect(0, 0, canvasSize, canvasSize);
+  }
 
-    function draw() {
-      ctx.fillStyle = getComputedStyle(body).backgroundColor;
-      ctx.fillRect(0, 0, canvas.width, canvas.height);
+  function gameLoop() {
+    clear();
+    update();
+    drawSnake();
+    drawFood();
+    if(!gameOver) setTimeout(gameLoop, 100);  // 10 FPS - adjust speed here
+  }
 
-      // Snake
-      ctx.fillStyle = "#0f0";
-      snake.forEach(part => {
-        ctx.fillRect(part.x * gridSize, part.y * gridSize, gridSize - 1, gridSize - 1);
-      });
+  // Keyboard controls
+  document.addEventListener('keydown', e => {
+    if(e.key === 'ArrowUp' && direction !== 'down') newDirection = 'up';
+    else if(e.key === 'ArrowDown' && direction !== 'up') newDirection = 'down';
+    else if(e.key === 'ArrowLeft' && direction !== 'right') newDirection = 'left';
+    else if(e.key === 'ArrowRight' && direction !== 'left') newDirection = 'right';
+  });
+document.addEventListener('keydown', e => {
+  if(['ArrowUp', 'ArrowDown', 'ArrowLeft', 'ArrowRight'].includes(e.key)) {
+    e.preventDefault();  // stop page from scrolling
+    if(e.key === 'ArrowUp' && direction !== 'down') newDirection = 'up';
+    else if(e.key === 'ArrowDown' && direction !== 'up') newDirection = 'down';
+    else if(e.key === 'ArrowLeft' && direction !== 'right') newDirection = 'left';
+    else if(e.key === 'ArrowRight' && direction !== 'left') newDirection = 'right';
+  }
+});
 
-      // Food
-      ctx.fillStyle = "red";
-      ctx.fillRect(food.x * gridSize, food.y * gridSize, gridSize - 1, gridSize - 1);
+  // Mobile buttons
+  const btns = {
+    up: document.querySelector('.up'),
+    down: document.querySelector('.down'),
+    left: document.querySelector('.left'),
+    right: document.querySelector('.right')
+  };
 
-      scoreText.textContent = "Score: " + score + " | Speed: " + speed + "ms";
-    }
+  btns.up.addEventListener('click', () => {
+    if(direction !== 'down') newDirection = 'up';
+  });
+  btns.down.addEventListener('click', () => {
+    if(direction !== 'up') newDirection = 'down';
+  });
+  btns.left.addEventListener('click', () => {
+    if(direction !== 'right') newDirection = 'left';
+  });
+  btns.right.addEventListener('click', () => {
+    if(direction !== 'left') newDirection = 'right';
+  });
 
-    function resetGame() {
-      snake = [{ x: 10, y: 10 }];
-      dx = 1; dy = 0;
-      score = 0;
-      speed = 150;
-      food = randomFood();
-      clearInterval(gameInterval);
-      gameInterval = setInterval(gameLoop, speed);
-    }
+  function resetGame() {
+    snake = [
+      { x: 9, y: 9 },
+      { x: 8, y: 9 },
+      { x: 7, y: 9 }
+    ];
+    direction = 'right';
+    newDirection = direction;
+    score = 0;
+    scoreDisplay.textContent = 'Score: ' + score;
+    gameOver = false;
+    placeFood();
+    gameLoop();
+  }
 
-    // Start game
-    resetGame();
-  </script>
+  placeFood();
+  gameLoop();
+
+})();
+</script>
 </body>
 </html>
